--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,7 @@ jobs:
     - run: npm ci
     - run: npm update
     - run: npm run build --if-present
-    - run: npm run start
+    - run: pm2 update
+    - run: sudo npm install pm2@latest -g
+    - run: pm2 init simple
+    - run: sudo pm2 start npm
